# PPMS_ToolKit

./: .gitignore  HC_script.py  __init__.py  code_test.ipynb  currie_weiss_law.py  data_processing.py  evaluate_function.py  measurement.py  pyproject.toml  readme.md  sample.py  saved_sample.pkl  script.py  setup.py
measurement/: __init__.py  base.py  heat_capacity.py  utils.py
reference code/: data_processing.py
src/ppms_toolkit/: sample.py
src/ppms_toolkit/measurement/: base.py  heat_capacity.py
