[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "PPMS_Toolkit"
version = "0.1.0"
description = "Toolkit for PPMS data processing"
authors = [{name="Yunxiao LIU", email="yunxiao.liu@tum.de"}]
dependencies = ["numpy", "scipy", "matplotlib", "pandas"]
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]